# liblouisutdml

./: .gitignore  .hgignore  .travis.yml  ANNOUNCEMENT  AUTHORS  ChangeLog  Dockerfile  Dockerfile.mingw  Dockerfile.win32  Dockerfile.win64  Makefile.am  Makefile.in  NEWS  README  README.mac  README.org  README.win32  README.windows  SConstruct  aclocal.m4  autogen.sh  configure  configure.ac  copyright-notice.cmt  copyright-notice.txt  liblouisutdml.pc.in  pull  push
doc/: Makefile.am  Makefile.in  copyright-notice  liblouisutdml.html  liblouisutdml.info  liblouisutdml.texi  liblouisutdml.txt  stamp-vti  utddoc.texi  version.texi  volumes.texi
lbu_files/: Makefile.am  Makefile.in  brf.cfg  canonical.cfg  default.cfg  document-content.sem  document.sem  dtbook.sem  html.sem  liblouisutdml.ini  makeutd.cfg  nemeth.ctb  nemeth.sem  nemeth_edit.ctb  nemeth_edit_en_ueb_with_switch_indicators.ctb  nemeth_edit_en_us_with_switch_indicators.ctb  nemeth_edit_with_switch_indicators.ctb  nimas.cfg  nimas.sem  preferences.cfg  sample-utd.cfg  transinxml.cfg  ukmaths.cfg  utd.sem  viewutd.ctb  viewxml.cfg  viewxml.ctb  volumes.cfg  wiskunde.ctb  wiskunde.sem  wiskunde_edit.ctb  wordDocument.sem
liblouisutdml/: Makefile.am  Makefile.in  Makesemnames  README  backfilestring.p  backtranslate.p  backtranslate.x  change_table.c  config.h.in  convert_utd.c  copyright-notice  examine_document.c  filebuf.p  filestart.p  formatbackblock.p  interpret_utd.c  islineend.p  liblouisutdml.c  liblouisutdml.def  liblouisutdml.h  logging.c  louisutdml.h  macro.x  makeContents.c  makeEndnotes.c  make_sem_names  make_sem_names.c  make_sem_names.pl  paths.c  readconfig.c  sem_enum.h  sem_names.h  semantics.c  transcribe_cdataSection.c  transcribe_chemistry.c  transcribe_computerCode.c  transcribe_document.c  transcribe_graphic.c  transcribe_math.c  transcribe_music.c  (+11 more)
man/: Makefile.am  Makefile.in
tests/: Makefile.am  Makefile.in  README  run_test.sh  run_test_suite.sh  run_test_suite.sh.in  testTranslateString.c  tripleTrans.c
tests/boxline.test/: README  expected.txt  identity.cti  input.xml  liblouisutdml.ini  semantics.sem  styles.cfg
tests/endNotes.test/: README  expected.txt  input.xml  styles.cfg
tests/firstLineIndent.test/: Makefile.am  liblouisutdml.ini  semantics.sem  styles.cfg
tests/footer_01.test/: README  input.xml
tests/footer_02.test/: Makefile.am  README  expected.txt  input.xml  styles.cfg
tests/hyphenation.test/: Makefile.am  expected.txt  hyph.dic  input.xml  pagenum.cti  semantics.sem
tests/mathml_nemeth/: Makefile.am  README  liblouisutdml.ini  styles.cfg
tests/mathml_nemeth/general_001.test/: expected.txt  input.xml
tests/mathml_nemeth/general_002.test/: input.xml
tests/mathml_nemeth/general_003.test/: expected.txt  input.xml
tests/mathml_nemeth/mfrac_01.test/: expected.txt  input.xml
tests/mathml_nemeth/mfrac_02.test/: expected.txt  input.xml
tests/mathml_nemeth/mfrac_03.test/: expected.txt  input.xml
tests/mathml_nemeth/mfrac_04.test/: expected.txt  input.xml
tests/mathml_nemeth/mfrac_05.test/: expected.txt  input.xml
tests/mathml_nemeth/mfrac_06.test/: expected.txt  input.xml
tests/mathml_nemeth/mfrac_07.test/: expected.txt  input.xml
tests/mathml_nemeth/mixed_scripts_01.test/: expected.txt  input.xml
tests/mathml_nemeth/mixed_scripts_02.test/: expected.txt  input.xml
tests/mathml_nemeth/mixed_scripts_03.test/: expected.txt  input.xml
tests/mathml_nemeth/mixed_scripts_04.test/: expected.txt  input.xml
tests/mathml_nemeth/mixed_scripts_05.test/: expected.txt  input.xml
tests/mathml_nemeth/mixed_scripts_06.test/: Makefile.am  expected.txt  input.xml
tests/mathml_nemeth/mixed_scripts_07.test/: expected.txt  input.xml
tests/mathml_nemeth/mmultiscripts_01.test/: expected.txt  input.xml
tests/mathml_nemeth/mmultiscripts_02.test/: expected.txt  input.xml
tests/mathml_nemeth/mmultiscripts_03.test/: expected.txt  input.xml
tests/mathml_nemeth/mmultiscripts_04.test/: expected.txt  input.xml
tests/mathml_nemeth/mmultiscripts_05.test/: expected.txt  input.xml
tests/mathml_nemeth/mmultiscripts_06.test/: expected.txt  input.xml
tests/mathml_nemeth/mmultiscripts_07.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_01.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_02.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_03.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_04.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_05.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_06.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_07.test/: input.xml
tests/mathml_nemeth/mover_08.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_09.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_10.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_11.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_12.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_13.test/: expected.txt  input.xml
tests/mathml_nemeth/mover_14.test/: expected.txt  input.xml
tests/minSyllableWidth.test/: Makefile.am  README  expected.txt  hyph.dic  input.xml  liblouisutdml.ini  semantics.sem  styles.cfg
tests/mixed_content.test/: Makefile.am  README  styles.cfg
tests/nemeth_MathCAT/: Makefile.am  README  liblouisutdml.ini  styles.cfg
tests/orphanControl_01.test/: README  liblouisutdml.ini
tests/orphanControl_02.test/: pagenum.cti
tests/page_numbering.test/: expected.txt  semantics.sem  styles.cfg
tests/pagenum.test/: Makefile.am  README
tests/prehyphenation.test/: README  expected.txt  input.xml  liblouisutdml.ini
tests/printPageNumberRange_01.test/: README  expected.txt
tests/printPageNumberRange_02.test/: Makefile.am  README  liblouisutdml.ini
tests/printPageNumberRange_03.test/: README  expected.txt  semantics.sem
tests/test_mathml_woluwe/: Makefile.am  config.cfg  liblouisutdml.ini
tests/test_suite/: Makefile.am  README
tools/: Makefile.am  Makefile.in  file2brl.c  lbu_devonly.c  msword2brl.in  pdf2brl.in  rtf2brl.in
(+790 files in other folders)
